--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -215,7 +215,7 @@ ion-datetime::part(wheel-item active) {
     //--ion-background-color: #000000;
     --ion-background-color-rgb: 0,0,0;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #000;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-color-step-50: #0d0d0d;
