--- a/src/app/tabs/search/search.page.html
+++ b/src/app/tabs/search/search.page.html
@@ -1,11 +1,15 @@
-<ion-content [fullscreen]="true">
-  <div class="flex flex-col gap-4">
-    <div class="p-2 w-full gap-3 mt-6 mx-auto flex flex-col">
-      <app-search-input #search></app-search-input>
-      <div>
-        inputs
-      </div>
-      <app-google-map></app-google-map>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <div class="flex flex-col pt-4 px-4">
+    <app-search-input></app-search-input>
+    <div class="w-full flex gap-4">
+      <app-input-text placeholder="Fecha inicio"></app-input-text>
+      <app-input-text placeholder="Fecha termino"></app-input-text>
     </div>
-  </div>
+    </div>
+  </ion-toolbar>
+</ion-header>
+<ion-content [fullscreen]="true">
+  <app-map-box></app-map-box>
+
 </ion-content>
