--- a/src/app/shared/components/labeled-icon/labeled-icon.component.html
+++ b/src/app/shared/components/labeled-icon/labeled-icon.component.html
@@ -3,7 +3,8 @@
   'flex-row': position ==='row',
   'flex-col': position ==='col'
 }">
-    <ion-icon class="w-10 h-10 text-green-600" [name]="iconName"></ion-icon>
+  <ion-icon class="w-10 h-10 text-green-600"
+    [name]="iconName"></ion-icon>
   <div>
     {{textLabel}}
   </div>
