--- a/src/app/tabs/publish/publish.page.html
+++ b/src/app/tabs/publish/publish.page.html
@@ -5,7 +5,8 @@
         <app-input-text placeholder="Salida"></app-input-text>
         <app-input-text placeholder="Destino"></app-input-text>
         <div class="flex gap-5">
-          <app-date-selector [desc]="false" label="Fecha"></app-date-selector>
+          <app-date-selector [desc]="false"
+            label="Fecha"></app-date-selector>
           <app-input-text placeholder="Asientos"></app-input-text>
         </div>
       </div>
@@ -13,6 +14,11 @@
     <div class="h-full">
       <div class="bg- bg-[url('https://s2.ppllstatics.com/laverdad/www/multimedia/202209/05/media/cortadas/mapa-murcia-kQgE-U170116261306200E-1248x770@La%20Verdad.jpg')] h-full"></div>
     </div>
-      <app-adaptative-button text="Publicar Viaje" color="bg-stone-800" color_hover="bg-stone-700" font_size="text-xl font-gotham" size="px-8 py-4 w-full" text_color="text-white"></app-adaptative-button>
+    <app-adaptative-button text="Publicar Viaje"
+      color="bg-stone-800"
+      color_hover="bg-stone-700"
+      font_size="text-xl font-gotham"
+      size="px-8 py-4 w-full"
+      text_color="text-white"></app-adaptative-button>
   </div>
 </ion-content>
