--- a/src/app/register/step1/step1.page.html
+++ b/src/app/register/step1/step1.page.html
@@ -27,13 +27,17 @@
     </div>
     <form (ngSubmit)="submit($event)"
       class="flex flex-col gap-4">
-      <app-input-text #user placeholder="Email"
+      <app-input-text #user
+        placeholder="Email"
         [type]="'email'"></app-input-text>
-      <app-input-text #password placeholder="Password"
+      <app-input-text #password
+        placeholder="Password"
         [type]="'password'"></app-input-text>
-      <app-input-text #confirmpassword placeholder="Confirmar Password"
+      <app-input-text #confirmpassword
+        placeholder="Confirmar Password"
         [type]="'password'"></app-input-text>
-      <div *ngIf="checkerGroup" class="text-xs text-threateningRed-500 h-4 font-gotham">
+      <div *ngIf="checkerGroup"
+        class="text-xs text-threateningRed-500 h-4 font-gotham">
         <div *ngIf="checkerGroup?.invalid && (checkerGroup?.dirty || checkerGroup?.touched)">
           <div *ngIf="checkerGroup?.errors?.['password']">
             Las contraseñas no coinciden
