--- a/src/app/reset-password/reset-password.page.html
+++ b/src/app/reset-password/reset-password.page.html
@@ -16,16 +16,22 @@
   <div class="p-2.5 w-full h-full max-w-xs mx-auto flex flex-col ">
     <form>
 
-    <app-input-text #pw1 label="password" placeholder="Nueva password" type="password"></app-input-text>
-    <app-input-text #pw2 label="password" placeholder="Confirma tu password" type="password"></app-input-text>
+      <app-input-text #pw1
+        label="password"
+        placeholder="Nueva password"
+        type="password"></app-input-text>
+      <app-input-text #pw2
+        label="password"
+        placeholder="Confirma tu password"
+        type="password"></app-input-text>
     </form>
-<!--    <div *ngIf="formGroup.invalid && (formGroup.dirty || formGroup.touched)">-->
-<!--      <div *ngIf="formGroup.errors?.['passwordMatch']">-->
-<!--        Las contraseñas no coinciden-->
-<!--      </div>-->
-<!--    </div>-->
+    <!--    <div *ngIf="formGroup.invalid && (formGroup.dirty || formGroup.touched)">-->
+    <!--      <div *ngIf="formGroup.errors?.['passwordMatch']">-->
+    <!--        Las contraseñas no coinciden-->
+    <!--      </div>-->
+    <!--    </div>-->
 
-   <app-filled-button contentText="Restablecer"></app-filled-button>
+    <app-filled-button contentText="Restablecer"></app-filled-button>
   </div>
 
 </ion-content>
