--- a/src/app/shared/components/date-selector/date-selector.component.html
+++ b/src/app/shared/components/date-selector/date-selector.component.html
@@ -1,14 +1,18 @@
 <div>
-<mat-form-field class="w-full">
-  <mat-label>{{label}}</mat-label>
-  <input
-    [max]="dateNowDesc"
-    [min]="dateNowAsc"
-    placeholder="MM/DD/YYYY" (dateInput)="onDate($event)" matInput [matDatepicker]="picker">
-<!--  <mat-hint>MM/DD/YYYY</mat-hint>-->
-  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
-</mat-form-field>
+  <mat-form-field class="w-full">
+    <mat-label>{{label}}</mat-label>
+    <input
+      [max]="dateNowDesc"
+      [min]="dateNowAsc"
+      placeholder="MM/DD/YYYY"
+      (dateInput)="onDate($event)"
+      matInput
+      [matDatepicker]="picker">
+    <!--  <mat-hint>MM/DD/YYYY</mat-hint>-->
+    <mat-datepicker-toggle matIconSuffix
+      [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
   <div class="mt-2 text-xs text-threateningRed-500 font-gotham">
     <div *ngIf="dateControl.invalid && (dateControl.dirty || dateControl.touched)">
       <div *ngIf="dateControl.errors?.['required']">
