--- a/src/app/shared/components/passenger-item/passenger-item.component.html
+++ b/src/app/shared/components/passenger-item/passenger-item.component.html
@@ -4,7 +4,9 @@
     <div>{{ userName }}</div>
   </div>
   <div>
-    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+    <button mat-icon-button
+      [matMenuTriggerFor]="menu"
+      aria-label="Example icon-button with a menu">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
