--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,4 +1,5 @@
-<a (click)="openModal()" class="mb-3">
+<a (click)="openModal()"
+  class="mb-3">
   <div class="focus:z-[3] focus:text-neutral-700 focus:outline-none focus:shadow-[inset_0_0_0_1px_rgb(59,113,202)] rounded-br-md rounded-tr-md border rounded-bl-md rounded-tl-md border-solid border-neutral-300 focus:border-primary relative mb-4 flex w-full flex-wrap items-stretch">
     <span
       class="input-group-text flex items-center whitespace-nowrap rounded px-3 py-4 text-center text-base font-normal text-neutral-700 dark:text-neutral-200"
@@ -17,13 +18,13 @@
         />
       </svg>
     </span>
-  <input
-    [autofocus]="false"
-    type="search"
-    class="relative m-0 block w-[1px] min-w-0 flex-auto bg-transparent bg-clip-padding py-[0.25rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out"
-    placeholder="Search"
-    aria-label="Search"
-    aria-describedby="button-addon2"
-  />
+    <input
+      [autofocus]="false"
+      type="search"
+      class="relative m-0 block w-[1px] min-w-0 flex-auto bg-transparent bg-clip-padding py-[0.25rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out"
+      placeholder="Search"
+      aria-label="Search"
+      aria-describedby="button-addon2"
+    />
   </div>
 </a>
