--- a/src/app/tabs/profile/profile.page.html
+++ b/src/app/tabs/profile/profile.page.html
@@ -7,7 +7,7 @@
   <div class="flex items-center flex-col my-5 gap-6">
     <div class="flex">
       <img class="rounded-full w-32"
-           src="https://cdn.discordapp.com/attachments/982116594543099924/1147603255032041642/5ni93d3zaera1.png">
+        src="https://cdn.discordapp.com/attachments/982116594543099924/1147603255032041642/5ni93d3zaera1.png">
     </div>
     <div class="flex flex-col gap-2 font-gotham text-center text-xl">
       <div class="flex justify-center gap-2">
@@ -21,10 +21,12 @@
   <app-divider></app-divider>
   <div class="flex flex-col gap-4">
     <div class="flex justify-evenly">
-      <app-labeled-icon iconName="add-circle-outline" position="row"
-                        textLabel="Documento"></app-labeled-icon>
-      <app-labeled-icon iconName="add-circle-outline" position="row"
-                        textLabel="Documento"></app-labeled-icon>
+      <app-labeled-icon iconName="add-circle-outline"
+        position="row"
+        textLabel="Documento"></app-labeled-icon>
+      <app-labeled-icon iconName="add-circle-outline"
+        position="row"
+        textLabel="Documento"></app-labeled-icon>
     </div>
     <div class="flex justify-center font-gotham text-base">
       5.0 - 4 Opiniones
@@ -42,10 +44,18 @@
       Preferencias
     </div>
     <div class="flex justify-evenly">
-      <app-labeled-icon iconName="add-circle-outline" position="col" textLabel="Con musica"></app-labeled-icon>
-      <app-labeled-icon iconName="add-circle-outline" position="col" textLabel="Con musica"></app-labeled-icon>
-      <app-labeled-icon iconName="add-circle-outline" position="col" textLabel="Con musica"></app-labeled-icon>
-      <app-labeled-icon iconName="add-circle-outline" position="col" textLabel="Con musica"></app-labeled-icon>
+      <app-labeled-icon iconName="add-circle-outline"
+        position="col"
+        textLabel="Con musica"></app-labeled-icon>
+      <app-labeled-icon iconName="add-circle-outline"
+        position="col"
+        textLabel="Con musica"></app-labeled-icon>
+      <app-labeled-icon iconName="add-circle-outline"
+        position="col"
+        textLabel="Con musica"></app-labeled-icon>
+      <app-labeled-icon iconName="add-circle-outline"
+        position="col"
+        textLabel="Con musica"></app-labeled-icon>
     </div>
   </div>
 </ion-content>
