--- a/src/app/tabs/search/search.page.html
+++ b/src/app/tabs/search/search.page.html
@@ -10,5 +10,8 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
-  <app-map-box></app-map-box>
+  <div id="smap"
+    #smap
+    class="map"
+    tabindex="0"></div>
 </ion-content>
