--- a/src/global.scss
+++ b/src/global.scss
@@ -33,3 +33,9 @@
   font-family: "GothamRoundedBold";
   src: url("assets/fonts/GothamRoundedBold.otf");
 }
+
+.map {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+}
