--- a/src/app/shared/components/drive-card/drive-card.component.html
+++ b/src/app/shared/components/drive-card/drive-card.component.html
@@ -7,7 +7,7 @@
         alt="">
     </div>
     <div class="flex flex-col m-1 justify-between">
-      <div class="">Fecha viaje: {{info.date | date}}</div>
+      <div class="">Fecha viaje: {{info.date.value | date}}</div>
       <div class="text-base font-gotham">{{info.driverAvatar.name}}</div>
       <div>Inicio: {{info.startLocation}} - Fin: {{info.endLocation}}</div>
     </div>
