--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -23,22 +23,22 @@
           contentText="Continuar"></app-filled-button>
       </div>
     </form>
-    <div class="flex flex-col gap-5">
-      <div class="flex justify-center items-center gap-2">
-        <div class="w-1/4 h-px bg-indigoBlack-500"></div>
-        <div class="text-sm font-gotham text-indigoBlack-500">o ingresa con
-        </div>
-        <div class="w-1/4 h-px bg-indigoBlack-500"></div>
-      </div>
-      <app-outlined-button contentText="Facebook">
-        <ion-icon name="logo-facebook"
-          class="mr-2"></ion-icon>
-      </app-outlined-button>
-      <app-outlined-button contentText="Google">
-        <ion-icon name="logo-google"
-          class="mr-2"></ion-icon>
-      </app-outlined-button>
-    </div>
+<!--    <div class="flex flex-col gap-5">-->
+<!--      <div class="flex justify-center items-center gap-2">-->
+<!--        <div class="w-1/4 h-px bg-indigoBlack-500"></div>-->
+<!--        <div class="text-sm font-gotham text-indigoBlack-500">o ingresa con-->
+<!--        </div>-->
+<!--        <div class="w-1/4 h-px bg-indigoBlack-500"></div>-->
+<!--      </div>-->
+<!--      <app-outlined-button contentText="Facebook">-->
+<!--        <ion-icon name="logo-facebook"-->
+<!--          class="mr-2"></ion-icon>-->
+<!--      </app-outlined-button>-->
+<!--      <app-outlined-button contentText="Google">-->
+<!--        <ion-icon name="logo-google"-->
+<!--          class="mr-2"></ion-icon>-->
+<!--      </app-outlined-button>-->
+<!--    </div>-->
     <div class="flex flex-col gap-5 items-center justify-center">
       <a routerLink="/register"
         class="text-base font-normal text-indigoBlack-500"><span class=" text-gray-600">¿No tienes cuenta?</span>
