--- a/src/app/shared/components/stepper-item/stepper-item.component.html
+++ b/src/app/shared/components/stepper-item/stepper-item.component.html
@@ -1,8 +1,8 @@
-<a (click)="link($event)"
+<a
   class="font-gotham w-8 h-8 flex justify-center items-center border-2 border-indigoBlack-400 rounded-lg"
   [ngClass]="{
-  'bg-indigoBlack-400': currentPage === step,
-  'text-white': currentPage === step
+  'bg-indigoBlack-400': currentStep >= step,
+  'text-white': currentStep >= step
 }">
   {{ step }}
 </a>
