fix(form-components): modify components validation

--- a/src/app/shared/components/country-selector/country-selector.component.html
+++ b/src/app/shared/components/country-selector/country-selector.component.html
@@ -31,7 +31,7 @@
             [alt]="p.name.common"/>
         </div>
         <div class="basis-9/12 flex items-center">
-          {{ p.name }}
+          {{ p.name.common }}
         </div>
       </div>
       <app-divider></app-divider>
