--- a/src/app/tabs/publish/publish.page.html
+++ b/src/app/tabs/publish/publish.page.html
@@ -4,7 +4,7 @@
       <app-input-text placeholder="Salida"></app-input-text>
       <app-input-text placeholder="Destino"></app-input-text>
       <div class="flex gap-5">
-        <app-date-selector [desc]="false"
+        <app-date-selector [mustAdult]="false"
           label="Fecha"></app-date-selector>
         <app-input-text placeholder="Asientos"></app-input-text>
       </div>
