fix(preference-components): modify management of preference selector

--- a/src/app/shared/components/preferences-selector-item/preferences-selector-item.component.html
+++ b/src/app/shared/components/preferences-selector-item/preferences-selector-item.component.html
@@ -6,9 +6,8 @@
     }"
   class="max-w-lg flex items-center h-16">
   <div class="basis-4/5 gap-2 flex items-center">
-    <ion-icon class="w-12 h-12"
-      [name]="item.icon"></ion-icon>
-    <div class="text-lg">{{ item.name }}</div>
+    <ion-icon class="w-12 h-12" [name]="item.icon.value"></ion-icon>
+    <div class="text-lg">{{ item.name.value}}</div>
   </div>
   <ion-icon *ngIf="selected"
     class="w-12 h-12"
