--- a/src/app/shared/components/preferences-selector-bar/preferences-selector-bar.component.html
+++ b/src/app/shared/components/preferences-selector-bar/preferences-selector-bar.component.html
@@ -1,8 +1,10 @@
 <div class="flex flex-col gap-4">
   <div class="font-gotham text-base">Preferencia al viajar</div>
-  <div class="flex flex-wrap w-80 gap-2">
-    <ng-container *ngFor="let pref of preferencesUser$ | async">
-      <div class="inline bg-gray-200 rounded-full p-2 font-gotham">{{ pref.name }}</div>
+  <div *ngIf="selectedPreferences.length !== 0"
+    class="flex flex-wrap w-80 gap-2">
+    <ng-container *ngFor="let pref of selectedPreferences">
+      <div>a</div>
+      <!--      <div class="inline bg-gray-200 rounded-full p-2 font-gotham">{{ pref.name.value }}</div>-->
     </ng-container>
   </div>
   <mat-form-field (click)="openModal()">
