--- a/src/app/shared/components/single-selector-modal/single-selector-modal.component.html
+++ b/src/app/shared/components/single-selector-modal/single-selector-modal.component.html
@@ -17,8 +17,8 @@
   <ul
     class="flex flex-col items-center w-full">
     <li
-      *ngFor="let p of countriesList.values(); index as i">
-      <div (click)="selectCountry(p.name.common)"
+      *ngFor="let p of dataList.values(); index as i">
+      <div (click)="selectCountry(p.name)"
         class="flex justify-evenly items-center gap-4 w-80"
         [ngClass]="{
       'rounded-lg': p.selected,
@@ -27,16 +27,16 @@
       }">
         <div class="basis-3/12 flex items-end justify-end">
           <img class="w-8 h-8 aspect-square object-contain"
-            [src]="p.flag.png"
-            [alt]="p.name.common"/>
+            [src]="p.image"
+            [alt]="p.name"/>
         </div>
         <div class="basis-9/12 flex items-center">
-          {{ p.name.common }}
+          {{ p.name }}
         </div>
       </div>
       <app-divider></app-divider>
       <div class="h-4"
-        *ngIf="countriesList.size - 1 === i"></div>
+        *ngIf="dataList.size - 1 === i"></div>
     </li>
   </ul>
 </ion-content>
