fix(app): adapt pages to components renames

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,10 +13,10 @@
         type="password"
         placeholder="Password"></app-input-text>
       <div>
-        <app-checkbox #check
+        <app-checkbox-input #check
           class="text-lg"
           contentText="Mantener sesion activa">
-        </app-checkbox>
+        </app-checkbox-input>
       </div>
       <div class="pt-4">
         <app-filled-button #filled
