--- a/src/app/register/step1/step1.page.html
+++ b/src/app/register/step1/step1.page.html
@@ -44,10 +44,10 @@
           </div>
         </div>
       </div>
-      <app-checkbox #check
+      <app-checkbox-input #check
         errorText="Debes aceptar los terminos y condiciones"
         [activeError]="true"
-        contentText="Aceptar terminos y condiciones"></app-checkbox>
+        contentText="Aceptar terminos y condiciones"></app-checkbox-input>
       <app-filled-button contentText="Continuar"></app-filled-button>
     </form>
   </div>
