--- a/src/app/trip-details/trip-details.page.html
+++ b/src/app/trip-details/trip-details.page.html
@@ -61,7 +61,7 @@
         <div>Pasajeros</div>
         <app-divider></app-divider>
         <div class="flex flex-col gap-4">
-          <app-passenger-item></app-passenger-item>
+          <app-item-list></app-item-list>
         </div>
         <div class="h-4"></div>
       </div>
