--- a/src/app/register/step2/step2.page.html
+++ b/src/app/register/step2/step2.page.html
@@ -21,16 +21,20 @@
       <app-input-text #phone
         placeholder="Telefono"
         [type]="'phone'"></app-input-text>
-      <app-country-selector-bar #country></app-country-selector-bar>
+      <app-single-selector-input
+        label="Ingresar Pais"
+        [databaseData]=""
+        errorText="Debes ingresar un pais de procedencia"
+        #country></app-single-selector-input>
       <app-date-selector #date></app-date-selector>
       <div class="flex justify-center items-center gap-2">
         <div class="w-1/4 h-px bg-indigoBlack-500"></div>
         <div class="text-sm font-gotham text-indigoBlack-500">Genero</div>
         <div class="w-1/4 h-px bg-indigoBlack-500"></div>
       </div>
-      <app-radio-button #radio
+      <app-radio-input #radio
         name="genero"
-        [radioButtons]="buttons"></app-radio-button>
+        [radioButtons]="buttons"></app-radio-input>
       <app-filled-button contentText="Registrarse"></app-filled-button>
     </form>
   </div>
