fix(single-selector-component): modify single selector component

--- a/src/app/register/step2/step2.page.html
+++ b/src/app/register/step2/step2.page.html
@@ -23,7 +23,7 @@
         [type]="'phone'"></app-input-text>
       <app-single-selector-input
         label="Ingresar Pais"
-        [databaseData]=""
+        [databaseData]="countries"
         errorText="Debes ingresar un pais de procedencia"
         #country></app-single-selector-input>
       <app-date-selector #date></app-date-selector>
