--- a/src/app/shared/components/date-selector/date-selector.component.html
+++ b/src/app/shared/components/date-selector/date-selector.component.html
@@ -1,18 +1,32 @@
 <div>
-  <mat-form-field class="w-full">
-    <mat-label>{{label}}</mat-label>
-    <input
-      [max]="dateNowDesc"
-      [min]="dateNowAsc"
-      placeholder="MM/DD/YYYY"
-      (dateInput)="onDate($event)"
-      matInput
-      [matDatepicker]="picker">
-    <!--  <mat-hint>MM/DD/YYYY</mat-hint>-->
-    <mat-datepicker-toggle matIconSuffix
-      [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
+  <div class="flex w-full gap-3">
+    <mat-form-field>
+      <mat-label>{{label}}</mat-label>
+      <input
+        [max]="dateNowDesc"
+        [min]="dateNowAsc"
+        placeholder="MM/DD/YYYY"
+        (dateInput)="onDate($event)"
+        matInput
+        [matDatepicker]="picker">
+      <mat-datepicker-toggle matIconSuffix
+        [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <div class="flex flex-col">
+      <div class="basis-2/3 flex items-center">
+      <ion-datetime-button datetime="datetime"></ion-datetime-button>
+      </div>
+    </div>
+    <ion-modal [keepContentsMounted]="true">
+      <ng-template>
+        <ion-datetime
+          locale="es-ES"
+          (ionChange)="onTime($event)"
+          id="datetime" presentation="time"></ion-datetime>
+      </ng-template>
+    </ion-modal>
+  </div>
   <div class="mt-2 text-xs text-threateningRed-500 font-gotham">
     <div *ngIf="dateControl.invalid && (dateControl.dirty || dateControl.touched)">
       <div *ngIf="dateControl.errors?.['required']">
