--- a/src/app/tabs/publish/publish.page.html
+++ b/src/app/tabs/publish/publish.page.html
@@ -3,18 +3,16 @@
     <div class="flex flex-col px-6 py-4">
       <app-input-text placeholder="Salida"></app-input-text>
       <app-input-text placeholder="Destino"></app-input-text>
-      <div class="flex gap-5">
         <app-date-selector [mustAdult]="false"
-          label="Fecha"></app-date-selector>
-        <app-input-text placeholder="Asientos"></app-input-text>
-      </div>
+          label="Fecha Inicio"></app-date-selector>
     </div>
-  <app-adaptative-button class="w-full" text="Publicar Viaje"
-                         color="bg-stone-800"
-                         color_hover="bg-stone-700"
-                         font_size="text-xl font-gotham"
-                         size="px-8 py-4 w-full"
-                         text_color="text-white"></app-adaptative-button>
+    <app-adaptative-button class="w-full"
+      text="Publicar Viaje"
+      color="bg-stone-800"
+      color_hover="bg-stone-700"
+      font_size="text-xl font-gotham"
+      size="px-8 py-4 w-full"
+      text_color="text-white"></app-adaptative-button>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
