--- a/src/app/shared/components/date-selector/date-selector.component.html
+++ b/src/app/shared/components/date-selector/date-selector.component.html
@@ -35,6 +35,9 @@
       <div *ngIf="dateControl.errors?.['invalid']">
         Debes tener al menos 18 años
       </div>
+      <div *ngIf="dateControl.errors?.['limit']">
+        La hora debe ser almenos 2 minutos mayor a la actual
+      </div>
     </div>
   </div>
 </div>
