--- a/src/app/tabs/publish/publish.page.html
+++ b/src/app/tabs/publish/publish.page.html
@@ -3,9 +3,10 @@
     <div class="flex flex-col px-6 py-4">
       <app-input-text placeholder="Salida"></app-input-text>
       <app-input-text placeholder="Destino"></app-input-text>
-        <app-date-selector label="Fecha Inicio"></app-date-selector>
+        <app-date-selector #date label="Fecha Inicio"></app-date-selector>
     </div>
     <app-adaptative-button class="w-full"
+      (click)="onPublish()"
       text="Publicar Viaje"
       color="bg-stone-800"
       color_hover="bg-stone-700"
