--- a/src/app/shared/components/activable-circle/activable-circle.component.html
+++ b/src/app/shared/components/activable-circle/activable-circle.component.html
@@ -1,3 +1,8 @@
-<p>
-  activable-circle works!
-</p>
+<div (click)="onClick()"
+  [id]="id"
+  class="w-8 h-8 rounded-full"
+  [ngClass]="{
+           'bg-red-500': !isActive,
+           'bg-blue-500': isActive,
+           }"
+></div>
