--- a/src/app/tabs/publish/publish.page.html
+++ b/src/app/tabs/publish/publish.page.html
@@ -1,8 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <div class="flex flex-col px-6 py-4">
-      <app-map-location-input #salida placeholder="Salida"></app-map-location-input>
-      <app-map-location-input #inicio placeholder="Destino"></app-map-location-input>
+      <app-map-location-input [pageKey]="pageKey"
+        #salida placeholder="Salida"></app-map-location-input>
+      <app-map-location-input [pageKey]="pageKey"
+        #inicio placeholder="Destino"></app-map-location-input>
         <app-date-selector #date label="Fecha Inicio"></app-date-selector>
     </div>
     <app-adaptative-button class="w-full"
