--- a/src/app/shared/components/search-launcher/search-launcher.component.html
+++ b/src/app/shared/components/search-launcher/search-launcher.component.html
@@ -19,8 +19,8 @@
       </svg>
     </span>
     <input
-      [autofocus]="false"
       type="search"
+      [value]="value"
       class="relative m-0 block w-[1px] min-w-0 flex-auto bg-transparent bg-clip-padding py-[0.25rem] text-base font-normal leading-[1.6] text-neutral-700 outline-none transition duration-200 ease-in-out"
       placeholder="Search"
       aria-label="Search"
