fix(activable-circle): restore normal color of activable circle

--- a/src/app/shared/components/activable-circle/activable-circle.component.html
+++ b/src/app/shared/components/activable-circle/activable-circle.component.html
@@ -1,7 +1,8 @@
   <mat-icon
   (click)="onClick()"
   [id]="id"
-  [ngClass]="[
-  isActive ? 'text-green-500' : 'text-'+color+'-500'
-   ]"
+  [ngClass]="{
+  'text-green-500' : isActive,
+  'text-red-500' : !isActive
+  }"
     aria-hidden="false" class="scale-150 fill-current" aria-label="icon" [fontIcon]="iconName"></mat-icon>
