--- a/src/app/shared/components/activable-circle/activable-circle.component.html
+++ b/src/app/shared/components/activable-circle/activable-circle.component.html
@@ -3,6 +3,7 @@
   [id]="id"
   [ngClass]="{
   'text-green-500' : isActive,
-  'text-red-500' : !isActive
+  'text-red-500' : !isActive && isRed,
+  'text-yellow-500' :  !isActive && !isRed
   }"
     aria-hidden="false" class="scale-150 fill-current" aria-label="icon" [fontIcon]="iconName"></mat-icon>
