fix(date-components): separate the date and date time component

--- a/src/app/tabs/publish/publish.page.html
+++ b/src/app/tabs/publish/publish.page.html
@@ -7,7 +7,7 @@
       <app-map-location-input [pageKey]="pageKey"
         [isRed]="false"
         #inicio placeholder="Destino"></app-map-location-input>
-        <app-date-selector #date label="Fecha Inicio"></app-date-selector>
+      <app-date-time-selector #date label="Fecha Inicio"></app-date-time-selector>
     </div>
     <app-adaptative-button class="w-full"
       (click)="onPublish()"
