--- a/src/app/shared/components/date-selector/date-selector.component.html
+++ b/src/app/shared/components/date-selector/date-selector.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="flex w-full gap-3">
+  <div class="w-full">
     <mat-form-field>
       <mat-label>{{label}}</mat-label>
       <input
@@ -15,21 +15,6 @@
         [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
-    <div class="flex flex-col">
-      <div class="basis-2/3 flex items-center">
-      <ion-datetime-button
-        datetime="datetime"></ion-datetime-button>
-      </div>
-    </div>
-    <ion-modal [keepContentsMounted]="true">
-      <ng-template>
-        <ion-datetime
-          [value]="timeSelected"
-          locale="es-ES"
-          (ionChange)="onTime($event)"
-          id="datetime" presentation="time"></ion-datetime>
-      </ng-template>
-    </ion-modal>
   </div>
   <div class="mt-2 text-xs text-threateningRed-500 font-gotham">
     <div *ngIf="dateControl.invalid && (dateControl.dirty || dateControl.touched)">
@@ -38,9 +23,6 @@
       </div>
       <div *ngIf="dateControl.errors?.['invalid']">
         Debes tener al menos 18 años
-      </div>
-      <div *ngIf="dateControl.errors?.['limit']">
-        La hora debe ser almenos 2 minutos mayor a la actual
       </div>
     </div>
   </div>
