--- a/src/app/register/step1/step1.page.html
+++ b/src/app/register/step1/step1.page.html
@@ -10,23 +10,8 @@
 <ion-content [fullscreen]="true">
   <div class="p-2.5 w-full h-full max-w-xs mx-auto flex flex-col gap-3">
     <app-stepper></app-stepper>
-<!--    <div class="flex justify-evenly items-center">-->
-<!--      <app-outlined-button contentText="Facebook">-->
-<!--        <ion-icon name="logo-facebook"-->
-<!--          class="mr-2"></ion-icon>-->
-<!--      </app-outlined-button>-->
-<!--      <app-outlined-button contentText="Google">-->
-<!--        <ion-icon name="logo-google"-->
-<!--          class="mr-2"></ion-icon>-->
-<!--      </app-outlined-button>-->
-<!--    </div>-->
-<!--    <div class="flex justify-center items-center gap-2">-->
-<!--      <div class="w-1/4 h-px bg-indigoBlack-500"></div>-->
-<!--      <div class="text-sm font-gotham text-indigoBlack-500">O tambien</div>-->
-<!--      <div class="w-1/4 h-px bg-indigoBlack-500"></div>-->
-<!--    </div>-->
     <form (ngSubmit)="submit($event)"
-      class="flex flex-col gap-4">
+      class="flex flex-col gap-6">
       <app-input-text #user
         placeholder="Email"
         [type]="'email'"></app-input-text>
@@ -34,10 +19,11 @@
         placeholder="Password"
         [type]="'password'"></app-input-text>
       <app-input-text #confirmpassword
+        [disableErrors]="true"
         placeholder="Confirmar Password"
         [type]="'password'"></app-input-text>
       <div *ngIf="checkerGroup"
-        class="text-xs text-threateningRed-500 h-4 font-gotham">
+        class="text-xs text-threateningRed-500 font-gotham">
         <div *ngIf="checkerGroup?.invalid && (checkerGroup?.dirty || checkerGroup?.touched)">
           <div *ngIf="checkerGroup?.errors?.['password']">
             Las contraseñas no coinciden
