fix(email-validation): add get user by email use case, exception & adapt

--- a/src/app/shared/components/input-text/input-text.component.html
+++ b/src/app/shared/components/input-text/input-text.component.html
@@ -32,6 +32,9 @@
       <div *ngIf="textControl.errors?.['email']">
         El email no es correcto
       </div>
+      <div *ngIf="textControl.errors?.['duplicate']">
+        El {{ placeholder | lowercase }} ya existe
+      </div>
       <div *ngIf="textControl.errors?.['uppercase']">
         Debe contener almenos una letra mayuscula
       </div>
