--- a/src/app/shared/components/input-area/input-area.component.html
+++ b/src/app/shared/components/input-area/input-area.component.html
@@ -2,6 +2,7 @@
   <ion-textarea (ionInput)="onChange()"
     [formControl]="textControl"
     [label]="title"
+    [value]="value"
     labelPlacement="floating"
     fill="outline"
     placeholder="Ejemplo: Soy un estudiante de computacion, me gusta el futbol"
