--- a/src/app/register/step3/step3.page.html
+++ b/src/app/register/step3/step3.page.html
@@ -1,13 +1,11 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/login"></ion-back-button>
-    </ion-buttons>
-    <ion-title>Registrarse</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
+  <app-app-bar-clone
+    href="/login"
+    #appBar
+    label="Registrarse"
+    (leadClicked)="leadClick()"
+  >
+  </app-app-bar-clone>
   <div class="p-2.5 w-full h-full max-w-xs mx-auto flex flex-col gap-5 justify-between">
     <div class="flex flex-col gap-5">
       <app-stepper></app-stepper>
