fix(alert/toast-service): add alert, toast service & adapt dependencies

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -11,6 +11,7 @@
         placeholder="Email"></app-input-text>
       <app-input-text #password
         type="password"
+        [disableErrors]="true"
         placeholder="Password"></app-input-text>
       <div>
         <app-checkbox-input #check
